# datui

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  TODO.md  WIPE_HISTORY_INSTRUCTIONS.md  book.toml  build.rs  multiversion.toml  reset_git_history.sh
.github/workflows/: build-and-publish-docs.yml  ci.yml  docs.yml  nightly.yml  publish-packages.yml  release-build.yml  release.yml  test-homebrew-tap.yml  test-install.yml
config/: default.toml
crates/datui-bin/: Cargo.toml  build.rs
crates/datui-bin/src/: main.rs
crates/datui-cli/: Cargo.toml  README.md  long_about.txt
crates/datui-cli/src/: lib.rs
crates/datui-lib/: Cargo.toml  README.md
crates/datui-lib/src/: analysis_modal.rs  cache.rs  chart_data.rs  chart_export.rs  chart_export_modal.rs  chart_modal.rs  cli.rs  cloud_hive.rs  config.rs  error_display.rs  filter_modal.rs  help_strings.rs  lib.rs  pivot_melt_modal.rs  query.rs  sort_filter_modal.rs  sort_modal.rs  source.rs  statistics.rs  template.rs
crates/datui-lib/src/help-strings/: analysis_correlation_detail.txt  analysis_correlation_matrix.txt  analysis_describe.txt  analysis_distribution.txt  analysis_distribution_detail.txt  chart.txt  export.txt  info_panel.txt  main_view.txt  pivot_melt.txt  query.txt  sort_filter.txt  template.txt
crates/datui-lib/src/render/: analysis_view.rs  chart_view.rs  context.rs  datatable_main.rs  datatable_view.rs  input_strip.rs  layout.rs  main_view.rs  main_view_render.rs  mod.rs  overlays.rs  sort_filter_sidebar.rs  template_sidebar.rs
crates/datui-lib/src/widgets/: analysis.rs  chart.rs  chart_export_modal.rs  controls.rs  datatable.rs  debug.rs  export.rs  info.rs  mod.rs  multiline_text_input.rs  pivot_melt.rs  radio_block.rs  schema.rs  template_modal.rs  text_input.rs
crates/datui-pyo3/: Cargo.toml
crates/datui-pyo3/src/: lib.rs
demos/: INSTRUCTIONS.md  README.md
docs/: SUMMARY.md  advanced.md  demos.md  for-developers.md  getting-started.md  introduction.md  pre-commit-setup.md  reference.md  user-guide.md
docs/advanced/: configuration.md  performance-tips.md
docs/for-developers/: adding-configuration-options.md  architecture.md  contributing.md  demos.md  documentation.md  packaging.md  pypi-deployment.md  python-bindings.md  setup-script.md  tests.md
docs/getting-started/: installation.md  quick-start.md
docs/reference/: command-line-options.md  keyboard-shortcuts.md  query-syntax.md
docs/user-guide/: analysis-features.md  charting.md  configuration.md  dataset-info.md  exporting-data.md  filtering-sorting.md  loading-data.md  python-module.md  querying-data.md  reshaping.md  templates.md
python/: LICENSE  README.md  pyproject.toml
python/datui/: __init__.py  _datui.pyi
python/tests/: test_datui.py
scripts/: build_all_docs_local.sh  build_package.py  build_single_version_docs.sh  build_versioned_docs.sh  bump_version.py  check_clippy.sh  generate_files.py  generate_sample_data.py  homebrew-formula.rb.template  rebuild_index.sh  remove_sample_data_from_history.sh  requirements-wheel-windows.txt  requirements-wheel.txt  requirements.txt  setup-dev.py  setup_dev.py
scripts/code/: check_clippy.sh  check_format.sh  format.sh
scripts/demos/: 01-basic-navigation.tape  02-querying.tape  03-info.tape  04-pivot.tape  05-melt.tape  06-sorting.tape  07-filtering.tape  08-export.tape  09-correlation-matrix.tape  10-charting.tape  11-overview.tape  demo-tape-header.txt  generate-all.py  generate-all.sh  generate-themes.py  generate_demos.py
scripts/dev/: generate_files.py
scripts/docker/install-datui-apt-repo/: Dockerfile  install-with-repository.sh
scripts/docker/install-datui-fedora/: Dockerfile
scripts/docs/: build_all_docs_local.py  build_all_docs_local.sh  build_single_version_docs.py  build_single_version_docs.sh  check_doc_links.sh  generate_command_line_options.py  index.html.j2  rebuild_index.py
scripts/install/: install.sh
scripts/packaging/: build_package.py  homebrew-formula.rb.template
scripts/winget/: README.md  derekwisong.datui.installer.yaml.template  derekwisong.datui.locale.en-US.yaml.template  derekwisong.datui.yaml.template  generate_manifests.sh
src/: analysis_modal.rs  cache.rs  chart_data.rs  chart_export.rs  chart_export_modal.rs  chart_modal.rs  cli.rs  config.rs  error_display.rs  export_modal.rs  filter_modal.rs  lib.rs  main.rs  pivot_melt_modal.rs  query.rs  sort_filter_modal.rs  sort_modal.rs  statistics.rs  template.rs
src/widgets/: analysis.rs  chart.rs  chart_export_modal.rs  controls.rs  datatable.rs  debug.rs  export.rs  info.rs  mod.rs  multiline_text_input.rs  pivot_melt.rs  schema.rs  template_modal.rs  text_input.rs  text_input_common.rs
tests/: color_parser_test.rs  config_integration_test.rs  config_test.rs  distribution_detection_test.rs  indexed_color_test.rs  integration_test.rs  pivot_melt_backend_test.rs  statistics_test.rs  template_test.rs  theme_application_test.rs
tests/common/: mod.rs
tests/sample-data/: 3-sfd-header.csv  README.md  crypto_prices.parquet  empty.csv  empty.parquet  error_inconsistent_types.csv  error_long_strings.csv  error_long_strings.parquet  error_special_chars.csv  error_special_chars.parquet  large_dataset.parquet  large_test.csv  mixed_types.csv  mixed_types.parquet  people.csv  people.parquet  sales.csv  sales.parquet  single_row.csv  single_row.parquet  unquoted_strings.csv
