[package]
name = "datui"
authors = ["Derek Wisong"]
description = "Data Exploration in the Terminal"
repository = "https://github.com/derekwisong/datui"
version = "0.2.15-dev"
edition = "2021"
license = "MIT"
default-run = "datui"

[dependencies]
datui-cli = { path = "crates/datui-cli" }
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "5.0"
fs2 = "0.4"
ratatui = { version = "0.29.0", features = ["all-widgets"] }
regex = "1.10"
chrono = "0.4"
tui-textarea = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
supports-color = "3.0"
toml = "0.8"
bzip2 = "0.4"
xz2 = "0.1"
flate2 = "1.0"
zstd = "0.13"
plotters = "0.3"
calamine = { version = "0.32", features = ["chrono"] }
orc-rust = "0.7"
arrow = "57"
tempfile = "3.14"

[dependencies.polars]
version = "0.52.0"
default-features = false
features = [
    "avro",
    "csv",
    "decompress",
    "dtype-datetime",
    "ipc",
    "json",
    "lazy",
    "parquet",
    "polars-io",
    "pivot",
    "temporal",
    "timezones",
    "month_start",
    "month_end",
    "coalesce",
    "regex",
    "abs",
    "round_series",
    "strings",
]

[dependencies.polars-parquet]
version = "0.52.0"
default-features = false

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_mangen = "0.2"
datui-cli = { path = "crates/datui-cli" }

# improve the performance of color-eyre for debug builds
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
strip = true      # Automatically strip symbols from the binary (reduces size)
lto = "thin"      # "Thin" LTO is much faster to compile than "fat" LTO
codegen-units = 1 # slightly slower compile, but faster runtime code. Set to 16 for faster compile.
opt-level = 3     # Optimize for speed

# Packaging: deb, rpm, AUR. See plans/packaging-deb-rpm-aur-plan.md.
[package.metadata.deb]
maintainer = "Derek Wisong"
# Install gzipped manpage (Debian Policy: manual pages must be gzip-9 compressed)
assets = [
    ["target/release/datui.1.gz", "usr/share/man/man1/datui.1.gz", "0644"],
]

[package.metadata.generate-rpm]
# Binary and gzipped manpage. Build with: cargo build --release, gzip manpage, then cargo generate-rpm.
[[package.metadata.generate-rpm.assets]]
source = "target/release/datui"
dest = "/usr/bin/datui"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "target/release/datui.1.gz"
dest = "/usr/share/man/man1/datui.1.gz"
mode = "0644"

[package.metadata.aur]
# depends = []
# optdepends = []
files = [["target/release/datui.1.gz", "/usr/share/man/man1/datui.1.gz"]]