[workspace]
members = ["crates/datui-lib", "crates/datui-cli"]
# Exclude datui-pyo3: requires Python at link time; exclude lets maturin build it standalone.
exclude = ["crates/datui-pyo3"]
resolver = "2"

[package]
name = "datui"
version = "0.2.47"
edition = "2021"
authors = ["Derek Wisong"]
description = "Data Exploration in the Terminal"
repository = "https://github.com/derekwisong/datui"
homepage = "https://derekwisong.github.io/datui"
license = "MIT"
readme = "README.md"
keywords = ["cli", "tui", "data", "utility", "analysis"]
categories = ["command-line-utilities", "science"]

[[bin]]
name = "datui"
path = "src/main.rs"

[features]
default = ["cloud", "http", "sql", "streaming"]
cloud = ["datui/cloud"]
http = ["datui/http"]
sql = ["datui/sql"]
streaming = ["datui/streaming"]

[dependencies]
# Import as `datui` in Rust; package name is datui-lib
datui = { path = "crates/datui-lib", package = "datui-lib", version = "0.2.47" }
datui-cli = { path = "crates/datui-cli", version = "0.2.47"}
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }

[build-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_mangen = "0.2"
datui-cli = { path = "crates/datui-cli", version = "0.2.47" }

[dev-dependencies]
# For integration tests (tests/*.rs) that use polars and config parsing
polars = { version = "0.52", features = ["lazy"] }
tempfile = "3.8"
toml = "0.8"

# Packaging: deb, rpm, AUR.
[package.metadata.deb]
maintainer = "Derek Wisong"
license-file = ["LICENSE", "0"]
depends = ["libfontconfig1"]
assets = [
    "$auto",
    ["target/release/datui.1.gz", "usr/share/man/man1/datui.1.gz", "0644"],
]

[package.metadata.generate-rpm]
[[package.metadata.generate-rpm.assets]]
source = "target/release/datui"
dest = "/usr/bin/datui"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "target/release/datui.1.gz"
dest = "/usr/share/man/man1/datui.1.gz"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "LICENSE"
dest = "/usr/share/licenses/datui/LICENSE"
mode = "0644"
doc = true

[package.metadata.generate-rpm.requires]
fontconfig = "*"

[package.metadata.aur]
depends = ["fontconfig"]
# Do not add LICENSE to files: cargo-aur already includes it when license is MIT
# (must_copy_license). Adding it here too made tar store it twice (second as hardlink),
# which caused "Can't create 'LICENSE'" when bsdtar extracted on the AUR.
files = [
    ["target/release/datui.1.gz", "/usr/share/man/man1/datui.1.gz"],
]

# improve the performance of color-eyre for debug builds
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = 3
