[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "datui"
version = "0.2.23.dev0"
description = "View Polars LazyFrames and DataFrames in the terminal with datui"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{ name = "Derek Wisong" }]
repository = "https://github.com/derekwisong/datui"
homepage = "https://derekwisong.github.io/datui/"
keywords = ["datui", "data", "polars", "tui", "dataframe", "eda", "tables"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # Data is passed as JSON (LazyFrame.serialize(format="json") when supported, else serialize()).
    # Minimum 0.20: LazyFrame.serialize() exists and returns JSON.
    "polars>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
datui = "datui._datui:run_cli"

[tool.maturin]
manifest-path = "../crates/datui-pyo3/Cargo.toml"
python-source = "."
# Install extension as datui._datui so datui/__init__.py can import it.
module-name = "datui._datui"
# Include pre-built CLI binary when present (release: copy target/release/datui to python/datui_bin/ first).
include = ["datui_bin/*"]
