[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "datui"
version = "0.2.28"
description = "Data Exploration in the Terminal"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "../LICENSE" }
authors = [{ name = "Derek Wisong" }]
repository = "https://github.com/derekwisong/datui"
homepage = "https://derekwisong.github.io/datui/"
keywords = ["datui", "data", "polars", "tui", "dataframe", "eda", "tables"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    # version important for serialization of lazyframe plans
    "polars>=0.20",
]

[project.urls]
Documentation = "https://derekwisong.github.io/datui/"
Repository = "https://github.com/derekwisong/datui"
Changelog = "https://github.com/derekwisong/datui/releases"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
datui = "datui._datui:run_cli"

[tool.maturin]
manifest-path = "../crates/datui-pyo3/Cargo.toml"
python-source = "."
# Include LICENSE in sdist (path relative to python/).
sdist-include = ["../LICENSE"]
# Install extension as datui._datui so datui/__init__.py can import it.
module-name = "datui._datui"
# Build a CPython stable-ABI wheel (cp38-abi3) compatible with 3.8+.
features = ["pyo3/abi3-py38"]
# Include pre-built CLI binary when present (release: copy target/release/datui to python/datui_bin/ first).
include = ["datui_bin/*"]
# Exclude native extension from source copy; maturin adds the built extension. Avoids "overwrote an existing tracked file"
# when a leftover _datui.pyd/.so from a previous "maturin develop" exists in datui/.
exclude = ["datui/_datui.*"]
