[package]
name = "datui-bin"
version = "0.2.17-dev"
edition = "2021"
description = "CLI binary for datui (Data Exploration in the Terminal)"
publish = false

[[bin]]
name = "datui"
path = "src/main.rs"

[dependencies]
datui = { path = "../.." }
datui-cli = { path = "../datui-cli" }
clap = { version = "4.5.54", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["all-widgets"] }

[build-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_mangen = "0.2"
datui-cli = { path = "../datui-cli" }

# Packaging: deb, rpm, AUR. See plans/packaging-deb-rpm-aur-plan.md.
[package.metadata.deb]
maintainer = "Derek Wisong"
# License at workspace root (paths relative to package dir when using -p datui-bin)
license-file = ["../../LICENSE", "0"]
# $auto = binary to /usr/bin; add gzipped manpage (Debian Policy: manual pages must be gzip-9 compressed)
assets = [
    "$auto",
    ["target/release/datui.1.gz", "usr/share/man/man1/datui.1.gz", "0644"],
]

[package.metadata.generate-rpm]
# Binary, gzipped manpage, and license. Paths relative to workspace root when run from repo root.
[[package.metadata.generate-rpm.assets]]
source = "target/release/datui"
dest = "/usr/bin/datui"
mode = "0755"

[[package.metadata.generate-rpm.assets]]
source = "target/release/datui.1.gz"
dest = "/usr/share/man/man1/datui.1.gz"
mode = "0644"

[[package.metadata.generate-rpm.assets]]
source = "LICENSE"
dest = "/usr/share/licenses/datui/LICENSE"
mode = "0644"
doc = true

[package.metadata.aur]
files = [["target/release/datui.1.gz", "/usr/share/man/man1/datui.1.gz"]]
